--- a/phase-2/practice/basicpython.ipynb
+++ b/phase-2/practice/basicpython.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6743de25",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ab911670",
    "metadata": {},
    "outputs": [],
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "fac525e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([30, 31, 32, 33, 34, 35, 36])"
+       "array([], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,23 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "86c51dd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['num 30 is even',\n",
-       " 'num 31 is odd',\n",
-       " 'num 32 is even',\n",
-       " 'num 33 is odd',\n",
-       " 'num 34 is even',\n",
-       " 'num 35 is odd',\n",
-       " 'num 36 is even']"
+       "[]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "45775425",
    "metadata": {},
    "outputs": [],
@@ -102,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "63a5a479",
    "metadata": {},
    "outputs": [
@@ -112,7 +106,7 @@
        "15"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "9ac622ff",
    "metadata": {},
    "outputs": [],
@@ -133,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "1b309bfd",
    "metadata": {},
    "outputs": [
@@ -143,7 +137,7 @@
        "11"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "786e84dc",
    "metadata": {},
    "outputs": [],
@@ -164,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "61fbea17",
    "metadata": {},
    "outputs": [
@@ -174,7 +168,7 @@
        "'even'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "20201fd7",
    "metadata": {},
    "outputs": [],
@@ -195,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "d709570f",
    "metadata": {},
    "outputs": [
@@ -205,7 +199,7 @@
        "15"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "4927176e",
    "metadata": {},
    "outputs": [],
@@ -235,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "d01fd728",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24])"
+       "array([], dtype=int64)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,17 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "8afdd708",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 12, 14, 16, 18, 20, 22, 24]"
+       "[]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,17 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "0b7d59db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 12, 14, 16, 18, 20, 22, 24]"
+       "[]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "cc0e713a",
    "metadata": {},
    "outputs": [
@@ -309,7 +303,7 @@
        "[2, 4, 6, 8]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6922966a",
    "metadata": {},
    "outputs": [
@@ -340,7 +334,7 @@
        "[1, 4, 9, 16, 25, 36]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "57e2b077",
    "metadata": {},
    "outputs": [
@@ -366,7 +360,7 @@
        "[1, 4, 9, 16, 25, 36]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "id": "f5c5dfc0",
    "metadata": {},
    "outputs": [
@@ -396,7 +390,7 @@
        "'hello me. Damn you are 26 years old'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,21 +411,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "00569e66",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8]"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lst=[i for i in range(1,9)]\n",
     "#list is iterable all values have memory allcoation"
@@ -439,17 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "455a694a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<list_iterator at 0x122f7ae3d30>"
+       "<list_iterator at 0x2197802fb20>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "51681c80",
    "metadata": {},
    "outputs": [],
@@ -474,19 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "id": "5e164df4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlst1\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -495,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "id": "b42d623d",
    "metadata": {},
    "outputs": [
@@ -505,7 +489,7 @@
        "2"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "4f607868",
    "metadata": {},
    "outputs": [
@@ -537,6 +521,14 @@
     "#use when len(lst)>>>>> use for loop for next\n",
     "for i in lst1:\n",
     "  print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "511b2834",
+   "metadata": {},
+   "source": [
+    "**USE PYFOREST FOR LAZY IMPORT (IMPORT * FROM * )**"
    ]
   },
   {
