--- a/phase-2/practice/basicpython.ipynb
+++ b/phase-2/practice/basicpython.ipynb
@@ -79,7 +79,7 @@
    "id": "7a419c3f",
    "metadata": {},
    "source": [
-    "LAMBDA FUNCTION (ANONYMUS FUNCTION)"
+    "LAMBDA FUNCTION (ANONYMUS FUNCTION)\n"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "id": "56c88c18",
    "metadata": {},
    "source": [
-    "FILTER FUNCTION"
+    "FILTER FUNCTION\n"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "id": "3df0db5e",
    "metadata": {},
    "source": [
-    "LIST COMPREHENSION"
+    "LIST COMPREHENSION\n"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "id": "255e7812",
    "metadata": {},
    "source": [
-    "FORMATTING"
+    "FORMATTING\n"
    ]
   },
   {
@@ -406,7 +406,7 @@
    "id": "ef9311e3",
    "metadata": {},
    "source": [
-    "ITERABLESVS TIERATORS"
+    "ITERABLESVS TIERATORS\n"
    ]
   },
   {
@@ -528,13 +528,374 @@
    "id": "511b2834",
    "metadata": {},
    "source": [
-    "**USE PYFOREST FOR LAZY IMPORT (IMPORT * FROM * )**"
+    "**USE PYFOREST FOR LAZY IMPORT (IMPORT _ FROM _ ) PIP INSTALL**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "360ba894",
+   "metadata": {},
+   "source": [
+    "OOPS IN PYTHON\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ee042a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class car:\n",
+    "  pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9b05356d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car1=car()\n",
+    "car1.windows=5\n",
+    "car1.door=4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d3187f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car2=car()\n",
+    "car2.windows=3\n",
+    "car2.doors=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "798c75e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car2.engine=\"petrol\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "374b05e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class car:\n",
+    "  def __init__(self,window,door,engine):\n",
+    "    self.window=window\n",
+    "    self.door=door\n",
+    "    self.engine=engine\n",
+    "  def sound(self):\n",
+    "    return \"more silent cause fia\" if self.engine==\"hybrid\" else \"loud\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3c739e98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "more silent cause fia\n"
+     ]
+    }
+   ],
+   "source": [
+    "car1=car(4,5,\"v10\")\n",
+    "car2=car(0,0,\"hybrid\")\n",
+    "print(car1.window)\n",
+    "print(car2.sound())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "442e13ec",
+   "metadata": {},
+   "source": [
+    "ACCESS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bf810ffc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#public\n",
+    "class car():\n",
+    "  def __init__(self,window,door,engine):\n",
+    "    self.window=window\n",
+    "    self.door=door\n",
+    "    self.engine=engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "45119370",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#protected use _bfore var name\n",
+    "class car():  \n",
+    "  def __init__(self,window,door,engine):\n",
+    "    self._window=window\n",
+    "    self._door=door\n",
+    "    self._engine=engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "014e6eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_car__door',\n",
+       " '_car__engine',\n",
+       " '_car__window']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car1=car(4,4,\"v10\")\n",
+    "dir(car1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2a3a2be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class truck(car):\n",
+    "  def __init__(self,window,door,engine,hp):\n",
+    "    super().__init__(window,door,engine)\n",
+    "    self.hp=hp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d8e00043",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truck(4,4,\"v10\",230)\n",
+    "dir(truck)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f8f838c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truck._door=50\n",
+    "truck._door"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9624bb69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#privte\n",
+    "class car():\n",
+    "  def __init__(self,window,door,engine):\n",
+    "    self.__window=window\n",
+    "    self.__door=door\n",
+    "    self.__engine=engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e68c2edb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pythn has no restriction means you can change anywhere but name change"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d46f83fd",
+   "metadata": {},
+   "source": [
+    "INHERTIANCE\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9f75ab39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class car():\n",
+    "  def __init__(self,window,door,engine):\n",
+    "    self.window=window\n",
+    "    self.door=door\n",
+    "    self.engine=engine\n",
+    "  def drive(self):\n",
+    "    print(\"driving\")\n",
+    "#add self in fucntions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bb7c4207",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "driving\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_car=car(4,4,\"v10\")\n",
+    "new_car.drive()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee042a73",
+   "id": "5068246c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1636883622.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[21], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    class audi(car):\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "class audi(car):\n",
+    "  def __init__(self, window, door, engine,ai):\n",
+    "    super().__init__(window, door, engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8eda52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39919549",
    "metadata": {},
    "outputs": [],
    "source": []
